Firebase Auth implementado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="createText">CREATE ACCOUNT</string>
     <string name="userName">Name</string>
     <string name="repeateUserPassword">Repeate password</string>
+    <string name="tv_search">Search Games</string>
 </resources>
