Layout da Home e da RegisterGame concluidos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="userName">Name</string>
     <string name="repeateUserPassword">Repeate password</string>
     <string name="tv_search">Search Games</string>
+    <string name="registerGameCreated">Created at</string>
+    <string name="GameDescriptionLabel">Description</string>
+    <string name="buttonSaveGame">SAVE GAME</string>
 </resources>
